--- a/algorithm/LeetCode/[Easy] 1021. Remove Outermost Parentheses.md
+++ b/algorithm/LeetCode/[Easy] 1021. Remove Outermost Parentheses.md
@@ -8,7 +8,7 @@ Given a valid parentheses string S, consider its primitive decomposition: S = P_
 
 Return S after removing the outermost parentheses of every primitive string in the primitive decomposition of S.
 
-Example 1:
+**Example 1:**
 ```
 Input: "(()())(())"
 Output: "()()()"
@@ -17,7 +17,7 @@ The input string is "(()())(())", with primitive decomposition "(()())" + "(())"
 After removing outer parentheses of each part, this is "()()" + "()" = "()()()".
 ```
 
-Example 2:
+**Example 2:**
 ```
 Input: "(()())(())(()(()))"
 Output: "()()()()(())"
