update LeetCode solution - list

--- a/algorithm/LeetCode/[Easy] 1021. Remove Outermost Parentheses.md
+++ b/algorithm/LeetCode/[Easy] 1021. Remove Outermost Parentheses.md
@@ -41,7 +41,9 @@ Note:
 1. S[i] is "(" or ")"
 1. S is a valid parentheses string
 
-Solution: 36 ms
+# Submissions
+---
+**Solution: 36 ms**
 ```python
 class Solution(object):
     def removeOuterParentheses(self, S):
