--- a/algorithm/LeetCode/[Easy] 1108. Defanging an IP Address.md
+++ b/algorithm/LeetCode/[Easy] 1108. Defanging an IP Address.md
@@ -17,8 +17,9 @@ Output: "255[.]100[.]50[.]0"
 Constraints:
 * The given address is a valid IPv4 address.
 
-
-Solution: 16 ms, 11.9 MB
+# Submissions
+---
+**Solution: 16 ms, 11.9 MB**
 ```python
 class Solution(object):
     def defangIPaddr(self, address):
