update LeetCode solution - Math

--- a/algorithm/LeetCode/[Easy] 1025. Divisor Game.md
+++ b/algorithm/LeetCode/[Easy] 1025. Divisor Game.md
@@ -54,3 +54,14 @@ class Solution:
 
         return res[-1]
 ```
+
+**Solution 2:**
+```
+Runtime: 24 ms
+Memory Usage: 12.7 MB
+```
+```python
+class Solution:
+    def divisorGame(self, N: int) -> bool:
+        return True if N % 2 == 0 else False
+```
