--- a/algorithm/LeetCode/[Hard] 1278. Palindrome Partitioning III.md
+++ b/algorithm/LeetCode/[Hard] 1278. Palindrome Partitioning III.md
@@ -118,7 +118,7 @@ class Solution:
         @lru_cache(maxsize=None)
         def part(st, k):
             if k == 1: return nchange(st, len(s)-1)
-            res = math.inf
+            res = float('inf')
             for i in range(st, len(s)):
                 res = min(res, nchange(st, i) + part(i+1, k-1))
             return res
