--- a/algorithm/LeetCode/[Easy] 1217. Play with Chips.md
+++ b/algorithm/LeetCode/[Easy] 1217. Play with Chips.md
@@ -2,7 +2,7 @@
 
 There are some chips, and the i-th chip is at position `chips[i]`.
 
-You can perform any of the two following types of moves any number of times (possibly zero) on any chip:
+You can perform any of the two following types of moves **any number of times** (possibly zero) **on any chip**:
 
 * Move the i-th chip by 2 units to the left or to the right with a cost of `0`.
 * Move the i-th chip by 1 unit to the left or to the right with a cost of `1`.
