update LeetCode solution - String

--- a/algorithm/LeetCode/[Hard] 1216. Valid Palindrome III.md
+++ b/algorithm/LeetCode/[Hard] 1216. Valid Palindrome III.md
@@ -30,9 +30,9 @@ Memory Usage: 14 MB
 class Solution:
     def isValidPalindrome(self, s: str, k: int) -> bool:
         N = len(s)
-        dp = [1 for _ in range(N)]
+        dp = [1 for _ in range(N)] # lonest palindrome of s[i:]
         for i in range(N):
-            last = 0
+            last = 0 # last round of dp[j]
             for j in range(i-1, -1, -1):
                 t = dp[j]
                 if s[i] == s[j]:
@@ -41,4 +41,23 @@ class Solution:
                     dp[j] = max(dp[j], dp[j+1])
                 last = t
         return (N-dp[0]) <= k
+```
+
+**Solution 2:**
+```python
+class Solution:
+    def isValidPalindrome(self, s: str, k: int) -> bool:
+        N = len(s)
+        
+        @functools.lru_cache(None)
+        def dp(i, j):
+            if i == j:
+                return 1
+            
+            if s[i] == s[j]:
+                return 2 + dp(i+1, j-1)
+            else:
+                return max(dp(i, j-1), dp(i+1, j))
+            
+        return (N-dp(0, N-1)) <= k
 ```
