update LeetCode solution - Hash Table

--- a/algorithm/LeetCode/[Easy] 1207. Unique Number of Occurrences.md
+++ b/algorithm/LeetCode/[Easy] 1207. Unique Number of Occurrences.md
@@ -1,6 +1,6 @@
 1207. Unique Number of Occurrences
 
-Given an array of integers arr, write a function that returns true if and only if the number of occurrences of each value in the array is unique.
+Given an array of integers `arr`, write a function that returns `true` if and only if the number of occurrences of each value in the array is unique.
 
  
 
@@ -32,18 +32,12 @@ Output: true
 ---
 **Solution**
 ```
-Runtime: 40 ms
-Memory Usage: 14.1 MB
+Runtime: 24 ms
+Memory Usage: 12.8 MB
 ```
 ```python
 class Solution:
     def uniqueOccurrences(self, arr: List[int]) -> bool:
         c = collections.Counter(arr)
-        unique = [False for _ in range(len(arr))]
-        for v in c.values():
-            if not unique[v]:
-                unique[v] = True
-            else:
-                return False
-        return True 
+        return len(collections.Counter(c.values()).values()) == len(c.values())
 ```
