update LeetCode solution - Binary Search

--- a/algorithm/LeetCode/[Easy] 1237. Find Positive Integer Solution for a Given Equation.md
+++ b/algorithm/LeetCode/[Easy] 1237. Find Positive Integer Solution for a Given Equation.md
@@ -87,7 +87,7 @@ class Solution:
         ans = []
         for x in range(1, z+1):
             y_low, y_high = 1, z
-            while(y_low <= y_high):
+            while y_low <= y_high:
                 y_mid = y_low + (y_high - y_low) // 2
                 curr = customfunction.f(x, y_mid)
                 if curr < z:
