--- a/algorithm/LeetCode/[Easy] 1237. Find Positive Integer Solution for a Given Equation.md
+++ b/algorithm/LeetCode/[Easy] 1237. Find Positive Integer Solution for a Given Equation.md
@@ -65,3 +65,38 @@ class Solution:
     def findSolution(self, customfunction: 'CustomFunction', z: int) -> List[List[int]]:
         return [[i,j] for i in range(1,z+1) for j in range(1, z+1) if customfunction.f(i,j) == z ]
 ```
+
+**Solution 2:**
+```
+Runtime: 32 ms
+Memory Usage: 12.7 MB
+```
+```python
+"""
+   This is the custom function interface.
+   You should not implement it, or speculate about its implementation
+   class CustomFunction:
+       # Returns f(x, y) for any given positive integers x and y.
+       # Note that f(x, y) is increasing with respect to both x and y.
+       # i.e. f(x, y) < f(x + 1, y), f(x, y) < f(x, y + 1)
+       def f(self, x, y):
+  
+"""
+class Solution:
+    def findSolution(self, customfunction: 'CustomFunction', z: int) -> List[List[int]]:
+        ans = []
+        for x in range(1, z+1):
+            y_low, y_high = 1, z
+            while(y_low <= y_high):
+                y_mid = y_low + (y_high - y_low) // 2
+                curr = customfunction.f(x, y_mid)
+                if curr < z:
+                    y_low = y_mid + 1
+                if curr > z:
+                    y_high = y_mid - 1
+                if curr == z:
+                    ans.append([x, y_mid])
+                    break    
+                    
+        return ans
+```
