update LeetCode solution - Greedy

--- a/algorithm/LeetCode/[Easy] 1196. How Many Apples Can You Put into the Basket.md
+++ b/algorithm/LeetCode/[Easy] 1196. How Many Apples Can You Put into the Basket.md
@@ -24,7 +24,7 @@ Explanation: The sum of weights of the 6 apples exceeds 5000 so we choose any 5 
 
 # Submissions
 ---
-**Solution**
+**Solution 1: (Greedy)**
 ```
 Runtime: 56 ms
 Memory Usage: 13.9 MB
