update LeetCode solution - Greedy

--- a/algorithm/LeetCode/[Easy] 1221. Split a String in Balanced Strings.md
+++ b/algorithm/LeetCode/[Easy] 1221. Split a String in Balanced Strings.md
@@ -36,7 +36,7 @@ Explanation: s can be split into "LLLLRRRR".
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Greedy)**
 ```
 Runtime: 56 ms
 Memory Usage: 13.9 MB
