--- a/algorithm/LeetCode/[Hard] 1231. Divide Chocolate.md
+++ b/algorithm/LeetCode/[Hard] 1231. Divide Chocolate.md
@@ -38,7 +38,7 @@ Explanation: You can divide the chocolate to [1,2,2], [1,2,2], [1,2,2]
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Binary Search, Greedy)**
 
 **Explanation**
 We want to maximize the minimum sweetness.
