--- a/algorithm/LeetCode/[Easy] 1217. Play with Chips.md
+++ b/algorithm/LeetCode/[Easy] 1217. Play with Chips.md
@@ -31,7 +31,7 @@ Explanation: Both fourth and fifth chip will be moved to position two with cost 
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Greedy)**
 ```
 Runtime: 40 ms
 Memory Usage: 13.7 MB
