--- a/algorithm/LeetCode/[Hard] 1263. Minimum Moves to Move a Box to Their Target Location.md
+++ b/algorithm/LeetCode/[Hard] 1263. Minimum Moves to Move a Box to Their Target Location.md
@@ -75,7 +75,7 @@ Output: -1
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (BFS)**
 
 First define a function to check from current state, what are the possible neighbouring states (use BFS to check if we can move the player to required location). Notice that the state includes both the location of the box and the player.
 Second BFS to see if we can reach the target location.
@@ -95,8 +95,8 @@ class Solution:
                 tmp = []
                 for loc in cur:
                     for x,y in dire:
-                        if 0<= loc[0]+x < len(grid) and 0 <= loc[1] + y < len(grid[0]) and (loc[0]+x,loc[1] +y) != cur_b and grid[loc[0] +x][loc[1] +y] != '#' and (loc[0]+x,loc[1] +y) not in seen:
-                            tmp += [(loc[0]+x,loc[1] +y)]
+                        if 0 <= loc[0]+x < len(grid) and 0 <= loc[1]+y < len(grid[0]) and (loc[0]+x, loc[1]+y) != cur_b and grid[loc[0]+x][loc[1]+y] != '#' and (loc[0]+x, loc[1] +y) not in seen:
+                            tmp += [(loc[0]+x, loc[1]+y)]
                 cur = set(tmp)
                 seen |= cur
                 if tar in seen:
@@ -109,18 +109,18 @@ class Solution:
                 if grid[i][j] == 'S': player = (i,j)
                 if grid[i][j] == 'T': target = (i,j)
 
-        seen,cur,res = set([(box,player)]), set([(box,player)]), 0
+        seen, cur, res = set([(box, player)]), set([(box, player)]), 0
         while cur:
             tmp = []
             res += 1
-            for b,p in cur:
-                for x,y in dire:
-                    if 0<= b[0]+x < len(grid) and 0 <= b[1] + y < len(grid[0]) and grid[b[0]+x][b[1]+y] != '#' and can_get(b,p,(b[0]-x,b[1]-y)) and ((b[0]+x,b[1]+y),b) not in seen:
-                        tmp += [((b[0]+x,b[1]+y),b)]
+            for b, p in cur:
+                for x, y in dire:
+                    if 0 <= b[0]+x < len(grid) and 0 <= b[1]+y < len(grid[0]) and grid[b[0]+x][b[1]+y] != '#' and can_get(b, p, (b[0]-x, b[1]-y)) and ((b[0]+x, b[1]+y), b) not in seen:
+                        tmp += [((b[0]+x, b[1]+y), b)]
             cur = set(tmp)
             seen |= cur
-            for x,y in dire:
-                if (target,(target[0]+x,target[1]+y)) in seen:
+            for x, y in dire:
+                if (target, (target[0]+x, target[1]+y)) in seen:
                     return res
         return -1
 ```
