update LeetCode solution - BFS

--- a/algorithm/LeetCode/[Hard] 1284. Minimum Number of Flips to Convert Binary Matrix to Zero Matrix.md
+++ b/algorithm/LeetCode/[Hard] 1284. Minimum Number of Flips to Convert Binary Matrix to Zero Matrix.md
@@ -48,7 +48,7 @@ Explanation: Given matrix can't be a zero matrix
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (BFS)**
 ```
 Runtime: 32 ms
 Memory Usage: 13 MB
