--- a/algorithm/LeetCode/[Hard] 1293. Shortest Path in a Grid with Obstacles Elimination.md
+++ b/algorithm/LeetCode/[Hard] 1293. Shortest Path in a Grid with Obstacles Elimination.md
@@ -46,7 +46,7 @@ We need to eliminate at least two obstacles to find such a walk.
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (BFS)**
 
 On top of BFS, I used an auxiliary dictionary "visited" to keep track of min eliminations used to get to each node, also to avoid repetition.
 
