--- a/algorithm/LeetCode/[Hard] 1298. Maximum Candies You Can Get from Boxes.md
+++ b/algorithm/LeetCode/[Hard] 1298. Maximum Candies You Can Get from Boxes.md
@@ -65,7 +65,7 @@ Output: 7
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (BFS)**
 
 This problem can be solved using BFS. In order to gather all the candies in some box `i`, this box must meet these requirements
 
