update LeetCode solution - Stack

--- a/algorithm/LeetCode/[Easy] 1021. Remove Outermost Parentheses.md
+++ b/algorithm/LeetCode/[Easy] 1021. Remove Outermost Parentheses.md
@@ -43,7 +43,11 @@ Note:
 
 # Submissions
 ---
-**Solution: 36 ms**
+**Solution 1: (Stack)**
+```
+Runtime: 36 ms
+Memory Usage: 12.1 MB
+```
 ```python
 class Solution(object):
     def removeOuterParentheses(self, S):
