update LeetCode solution - Backtracking

--- a/algorithm/LeetCode/[Hard] 1240. Tiling a Rectangle with the Fewest Squares.md
+++ b/algorithm/LeetCode/[Hard] 1240. Tiling a Rectangle with the Fewest Squares.md
@@ -39,7 +39,7 @@ Output: 6
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (DP)**
 ```
 Runtime: 44 ms
 Memory Usage: 13.7 MB
@@ -58,4 +58,39 @@ class Solution:
                     cache[i][j] = min(cache[i][j], 1 + min(cache[i-k][j] + cache[k][j-k],  # lanscape
                                                            cache[i-k][k] + cache[i][j-k]))  # portrait
         return cache[n][m]
+```
+
+**Solution 2: (Backtracking)**
+
+Place square from bottom->top. For each square, try to scan and find the current lowest point, add square there.
+What if there is one big square that shadows one small square under it? Then that small square must be placed first because it has lower height. So this way of placement is always valid.
+
+```
+Runtime: 116 ms
+Memory Usage: 12.9 MB
+```
+```python
+class Solution:
+    def tilingRectangle(self, n: int, m: int) -> int:
+        res = n*m
+        def dfs(height,moves):
+            nonlocal res
+            if all(h == n for h in height):
+                res = min(res,moves)
+                return
+            if moves >= res:
+                return
+            idx = height.index(min(height))
+            idx2 = idx
+            while idx2 < m and height[idx] == height[idx2]:
+                idx2 += 1
+            maxl = min(idx2-idx, n-height[idx])
+            for l in range(maxl, 0, -1):
+                height2 = list(height)
+                for j in range(l):
+                    height2[idx+j] += l
+                dfs(height2, moves+1)
+        dfs([0]*m,0)
+        
+        return res
 ```
