--- a/algorithm/LeetCode/[Hard] 1307. Verbal Arithmetic Puzzle.md
+++ b/algorithm/LeetCode/[Hard] 1307. Verbal Arithmetic Puzzle.md
@@ -50,7 +50,7 @@ Output: false
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Backtracking)**
 
 * The idea is to use backtracking to try all possible values column wise.
 * We go column by column and for each column we go row by row and start assigning values.
@@ -69,7 +69,7 @@ Memory Usage: 12.9 MB
 ```python
 class Solution:
     def isSolvable(self, words: List[str], result: str) -> bool:
-        def solve(i, j, carry):
+        def solve(i, j, carry):  # i: char, j: word
             
             # The current column assignment is over, so check for validity
             if j == len(words):
@@ -80,6 +80,7 @@ class Solution:
                 # We have come to column i, but the result itself is not long enough.
                 if i >= len(result): return False
                 
+                # start to scan next char j+1 from word 0
                 # i th char of result  is already assigned, so check if its valid and go to next column i+1 and start from word 0
                 if result[i] in assign:
                     return csum % 10 == assign[result[i]] and solve(i+1, 0, csum // 10)
