update LeetCode solution - Bit Manipulation

--- a/algorithm/LeetCode/[Hard] 1255. Maximum Score Words Formed by Letters.md
+++ b/algorithm/LeetCode/[Hard] 1255. Maximum Score Words Formed by Letters.md
@@ -51,7 +51,7 @@ Letter "e" can only be used once.
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Backtracking, Bit Manipulation)**
 
 This problem is about finding a combination that the combination of the words whose total letter consumptions are restricted by letters (covert to a character counter) that achieved the highest score.
 So we can use DFS here to search all valid combinations and find out the highest score. To reduce the search space, we can prune the branch and backtrack when current branch is no longer valid or can't reach the current highest score.
