--- a/algorithm/LeetCode/[Easy] 1122. Relative Sort Array.md
+++ b/algorithm/LeetCode/[Easy] 1122. Relative Sort Array.md
@@ -1,6 +1,6 @@
 1122. Relative Sort Array
 
-Given two arrays `arr1` and `arr2`, the elements of arr2 are distinct, and all elements in `arr2` are also in `arr1`.
+Given two arrays `arr1` and `arr2`, the elements of `arr2` are distinct, and all elements in `arr2` are also in `arr1`.
 
 Sort the elements of `arr1` such that the relative ordering of items in `arr1` are the same as in `arr2`.  Elements that don't appear in `arr2` should be placed at the end of `arr1` in **ascending order**.
 
@@ -21,26 +21,21 @@ Output: [2,2,2,1,4,3,3,9,6,7,19]
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Hash Table)**
 ```
-Runtime: 52 ms
-Memory Usage: 14.1 MB
+Runtime: 24 ms
+Memory Usage: 12.9 MB
 ```
 ```python
 class Solution:
     def relativeSortArray(self, arr1: List[int], arr2: List[int]) -> List[int]:
-        dic = collections.defaultdict(int)
-        s = set(arr2)
-        r = []
-        ans = []
-        for x in arr1:
-            if x in s:
-                dic[x] += 1
-            else:
-                r.append(x)
-        for x in arr2:
-            ans += [x]*dic[x]
-        r.sort()
-        ans += r
-        return ans
+        count = collections.Counter(arr1)
+        result = []
+        for item in arr2:
+            result += [item] * count[item]
+            del count[item]
+        for item, count in sorted(count.items(), key=lambda item: item[0]):
+            result += [item]*count
+            
+        return result
 ```
