--- a/algorithm/LeetCode/[Easy] 1331. Rank Transform of an Array.md
+++ b/algorithm/LeetCode/[Easy] 1331. Rank Transform of an Array.md
@@ -36,7 +36,7 @@ Output: [5,3,4,2,8,6,7,1,3]
 
 # Submissions
 ---
-**Solution 1: (Hash table)**
+**Solution 1: (Hash Table)**
 ```
 Runtime: 584 ms
 Memory Usage: 30.4 MB
