--- a/algorithm/LeetCode/[Hard] 1235. Maximum Profit in Job Scheduling.md
+++ b/algorithm/LeetCode/[Hard] 1235. Maximum Profit in Job Scheduling.md
@@ -46,7 +46,7 @@ Output: 6
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (DP, Binary Search, Sort)**
 
 **Explanation**
 * Sort the jobs by endTime.
