update LeetCode solution - Linked List

--- a/algorithm/LeetCode/[Easy] 1290. Convert Binary Number in a Linked List to Integer.md
+++ b/algorithm/LeetCode/[Easy] 1290. Convert Binary Number in a Linked List to Integer.md
@@ -48,7 +48,7 @@ Output: 0
 
 # Submissions
 ---
-**Solution 1: (Bit Manipulation)**
+**Solution 1: (Bit Manipulation, Linked List)**
 ```
 Runtime: 28 ms
 Memory Usage: 12.7 MB
