update LeetCode solution - Divide and Conquer

--- a/algorithm/LeetCode/[Hard] 1274. Number of Ships in a Rectangle.md
+++ b/algorithm/LeetCode/[Hard] 1274. Number of Ships in a Rectangle.md
@@ -31,7 +31,7 @@ Explanation: From [0,0] to [4,4] we can count 3 ships within the range.
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (DFS, Divide and Conquer)**
 ```
 Runtime: 44 ms
 Memory Usage: 12.8 MB
