update LeetCode solution - Recursion

--- a/algorithm/LeetCode/[Hard] 1032. Stream of Characters.md
+++ b/algorithm/LeetCode/[Hard] 1032. Stream of Characters.md
@@ -39,8 +39,8 @@ streamChecker.query('l');          // return true, because 'kl' is in the wordli
 1. every add read the last k characters backwards to queue and traverse the trie at the same time
 
 ```
-Runtime: 624 ms
-Memory Usage: 36.1 MB
+Runtime: 616 ms
+Memory Usage: 36.2 MB
 ```
 ```python
 class StreamChecker:
@@ -53,20 +53,22 @@ class StreamChecker:
             for c in word[::-1]:
                 t = t.setdefault(c, {})
             t['#'] = {}
-        self.q = collections.deque([])
+        self.q = collections.deque()
 
     def query(self, letter: str) -> bool:
-        self.q.appendleft(letter)
+        self.q.append(letter)
         if len(self.q) > self.max_:
-            self.q.pop()
+            self.q.popleft()
         t = self.trie
-        for c in self.q:
+        for c in reversed(self.q):
             if c not in t:
                 return False
             t = t[c]
             if '#' in t:
                 return True
         return False
+                    
+
 
 # Your StreamChecker object will be instantiated and called as such:
 # obj = StreamChecker(words)
