update LeetCode solution - Topological Sort

--- a/algorithm/LeetCode/[Hard] 1203. Sort Items by Groups Respecting Dependencies.md
+++ b/algorithm/LeetCode/[Hard] 1203. Sort Items by Groups Respecting Dependencies.md
@@ -13,7 +13,7 @@ Return any solution if there is more than one solution and return an empty list 
 
 **Example 1:**
 
-
+![1203_1359_ex1.png](img/1203_1359_ex1.png)
 ```
 Input: n = 8, m = 2, group = [-1,-1,1,0,0,1,0,-1], beforeItems = [[],[6],[5],[6],[3,6],[],[],[]]
 Output: [6,3,4,1,5,2,0,7]
@@ -61,7 +61,7 @@ class Solution:
             return no_cycles
         
         # First make items that are on their own to group[item] = item
-        # and make the items that are in the same group to have a group[item] o f their leader,
+        # and make the items that are in the same group to have a group[item] of their leader,
         # where the leader is the item of the group that has min index
         group_translation = {}
         group_table = collections.defaultdict(list)
