update LeetCode solution - Geometry

--- a/algorithm/LeetCode/[Easy] 1232. Check If It Is a Straight Line.md
+++ b/algorithm/LeetCode/[Easy] 1232. Check If It Is a Straight Line.md
@@ -29,7 +29,7 @@ Output: false
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Geometry)**
 
 The slope for a line through any 2 points `(p, q)` and `(u, v)` is `(q - v) / (p - u)`; Therefore, for any given 3 points (denote the 3rd point as `(x, y)`), if they are in a straight line, the slopes of the lines from the 3rd point to the other 2 points must be equal:
 
