update LeetCode solution - Rolling Hash

--- a/algorithm/LeetCode/[Hard] 1316. Distinct Echo Substrings.md
+++ b/algorithm/LeetCode/[Hard] 1316. Distinct Echo Substrings.md
@@ -25,7 +25,7 @@ Explanation: The 2 substrings are "ee" and "leetcodeleetcode".
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Rolling Hash)**
 ```
 Runtime: 2340 ms
 Memory Usage: 13.2 MB
