--- a/algorithm/LeetCode/[Easy] 1013. Partition Array Into Three Parts With Equal Sum.md
+++ b/algorithm/LeetCode/[Easy] 1013. Partition Array Into Three Parts With Equal Sum.md
@@ -1,6 +1,6 @@
 1013. Partition Array Into Three Parts With Equal Sum
 
-Given an array `A` of integers, return true if and only if we can partition the array into three non-empty parts with equal sums.
+Given an array `A` of integers, return `true` if and only if we can partition the array into three non-empty parts with equal sums.
 
 Formally, we can partition the array if we can find indexes `i+1 < j` with `(A[0] + A[1] + ... + A[i] == A[i+1] + A[i+2] + ... + A[j-1] == A[j] + A[j-1] + ... + A[A.length - 1])`
 
@@ -33,7 +33,7 @@ Explanation: 3 + 3 = 6 = 5 - 2 + 2 + 5 + 1 - 9 + 4
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Two Pointers)**
 ```
 Runtime: 356 ms
 Memory Usage: 20.6 MB
