--- a/algorithm/LeetCode/[Easy] 1018. Binary Prefix Divisible By 5.md
+++ b/algorithm/LeetCode/[Easy] 1018. Binary Prefix Divisible By 5.md
@@ -37,7 +37,7 @@ Output: [false,false,false,false,false]
 
 # submissions
 ---
-**Solution 1:**
+**Solution 1: (Greedy)**
 ```
 Runtime: 144 ms
 Memory Usage: 15 MB
