--- a/algorithm/LeetCode/[Easy] 1160. Find Words That Can Be Formed by Characters.md
+++ b/algorithm/LeetCode/[Easy] 1160. Find Words That Can Be Formed by Characters.md
@@ -32,7 +32,7 @@ The strings that can be formed are "hello" and "world" so the answer is 5 + 5 = 
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Counter)**
 ```
 Runtime: 232 ms
 Memory Usage: 14 MB
@@ -54,7 +54,7 @@ class Solution:
         return ans
 ```
 
-**Solution 2:**
+**Solution 2: (Greedy)**
 ```
 Runtime: 108 ms
 Memory Usage: 13.9 MB
