update LeetCode solution - Array

--- a/algorithm/LeetCode/[Easy] 1089. Duplicate Zeros.md
+++ b/algorithm/LeetCode/[Easy] 1089. Duplicate Zeros.md
@@ -28,7 +28,7 @@ Explanation: After calling your function, the input array is modified to: [1,2,3
 
 # Submissions:
 ---
-**Solution :**
+**Solution 1: (Array)**
 ```
 Runtime: 84 ms
 Memory Usage: 14.5 MB
