--- a/algorithm/LeetCode/[Easy] 1128. Number of Equivalent Domino Pairs.md
+++ b/algorithm/LeetCode/[Easy] 1128. Number of Equivalent Domino Pairs.md
@@ -19,7 +19,7 @@ Output: 1
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Math, Hash Table)**
 ```
 Runtime: 276 ms
 Memory Usage: 23.4 MB
@@ -37,4 +37,27 @@ class Solution:
             res += dic[k] * (dic[k] - 1) // 2
 
         return res
+```
+
+**Solution 2: (Hash Table)**
+```
+Runtime: 252 ms
+Memory Usage: 22.2 MB
+```
+```python
+class Solution:
+    def numEquivDominoPairs(self, dominoes: List[List[int]]) -> int:
+        d = collections.defaultdict(int)
+        ans = 0
+        for a, b in dominoes:
+            if (a, b) in d:
+                d[a, b] += 1
+            elif (b, a) in d:
+                d[b, a] += 1
+            else:
+                d[a, b] = 1
+        for _, v in d.items():
+            ans += v * (v-1) // 2
+                
+        return ans
 ```
