--- a/algorithm/LeetCode/[Easy] 1243. Array Transformation.md
+++ b/algorithm/LeetCode/[Easy] 1243. Array Transformation.md
@@ -36,7 +36,7 @@ No more operations can be done to this array.
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Array)**
 ```
 Runtime: 56 ms
 Memory Usage: 14 MB
