--- a/algorithm/LeetCode/[Easy] 1287. Element Appearing More Than 25% In Sorted Array.md
+++ b/algorithm/LeetCode/[Easy] 1287. Element Appearing More Than 25% In Sorted Array.md
@@ -21,11 +21,11 @@ Output: 6
 ---
 **Solution 1:**
 ```
-Runtime: 96 ms
-Memory Usage: 14.1 MB
+Runtime: 92 ms
+Memory Usage: 14.4 MB
 ```
 ```python
 class Solution:
     def findSpecialInteger(self, arr: List[int]) -> int:
-        return collections.Counter(arr).most_common(1)[0][0]
+        return collections.Counter(arr).most_common()[0][0]
 ```
