--- a/algorithm/LeetCode/[Easy] 1331. Rank Transform of an Array.md
+++ b/algorithm/LeetCode/[Easy] 1331. Rank Transform of an Array.md
@@ -49,3 +49,20 @@ class Solution:
             rank.setdefault(a, len(rank) + 1)
         return list(map(rank.get, arr))
 ```
+
+**Solution 2: (Hash Table)**
+```
+Runtime: 376 ms
+Memory Usage: 29.6 MB
+```
+```python
+class Solution:
+    def arrayRankTransform(self, arr: List[int]) -> List[int]:
+        count = collections.Counter(arr)
+        rank = 1
+        for k in sorted(count):
+            count[k] = rank
+            rank += 1
+        
+        return [count[a] for a in arr]
+```
