--- a/algorithm/LeetCode/[Hard] 1074. Number of Submatrices That Sum to Target.md
+++ b/algorithm/LeetCode/[Hard] 1074. Number of Submatrices That Sum to Target.md
@@ -61,11 +61,11 @@ class Solution:
         R = len(matrix)
         C = len(matrix[0])
         
-        for i in range(R):
+        for k in range(R):
             col_prefix = [0]*C
-            for j in range(i, R):
-                for k in range(C):
-                    col_prefix[k] += matrix[j][k]
+            for i in range(k, R):
+                for j in range(C):
+                    col_prefix[j] += matrix[i][j]
                 res += num_for_one_row(col_prefix)
                 
         return res
