--- a/algorithm/LeetCode/[Easy] 1051. Height Checker.md
+++ b/algorithm/LeetCode/[Easy] 1051. Height Checker.md
@@ -21,7 +21,7 @@ Students with heights 4, 3 and the last 1 are not standing in the right position
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Sort)**
 ```
 Runtime: 40 ms
 Memory Usage: 13.6 MB
