--- a/algorithm/LeetCode/[Easy] 1122. Relative Sort Array.md
+++ b/algorithm/LeetCode/[Easy] 1122. Relative Sort Array.md
@@ -23,19 +23,13 @@ Output: [2,2,2,1,4,3,3,9,6,7,19]
 ---
 **Solution 1: (Hash Table)**
 ```
-Runtime: 24 ms
-Memory Usage: 12.9 MB
+Runtime: 28 ms
+Memory Usage: 12.7 MB
 ```
 ```python
 class Solution:
     def relativeSortArray(self, arr1: List[int], arr2: List[int]) -> List[int]:
-        count = collections.Counter(arr1)
-        result = []
-        for item in arr2:
-            result += [item] * count[item]
-            del count[item]
-        for item, count in sorted(count.items(), key=lambda item: item[0]):
-            result += [item]*count
-            
-        return result
+        d = {a: i for i, a in enumerate(arr2)}
+        N = len(d)
+        return sorted(arr1, key=lambda x: d[x] if x in d else x+N)
 ```
