update LeetCode solution - Array

--- a/algorithm/LeetCode/[Easy] 1170. Compare Strings by Frequency of the Smallest Character.md
+++ b/algorithm/LeetCode/[Easy] 1170. Compare Strings by Frequency of the Smallest Character.md
@@ -29,25 +29,20 @@ Explanation: On the first query only f("bbb") < f("aaaa"). On the second query b
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Array, Binary Search)**
 ```
-Runtime: 528 ms
-Memory Usage: 14.4 MB
+Runtime: 52 ms
+Memory Usage: 13.3 MB
 ```
 ```python
 class Solution:
     def numSmallerByFrequency(self, queries: List[str], words: List[str]) -> List[int]:
-        def f(s):
-            t = sorted(list(s))[0]
-            return s.count(t)
-        query = [f(x) for x in queries]
-        word = [f(x) for x in words]
-        m = []
-        for x in query:
-            count = 0
-            for y in word:
-                if y>x:
-                    count+=1
-            m.append(count)
-        return m
+        words_freq = sorted([w.count(min(w)) for w in words])
+        res = []
+        for q in queries:
+            curr = q.count(min(q))
+            pos = bisect.bisect(words_freq, curr)
+            res.append(len(words_freq) - pos)
+        return res
+            
 ```
