--- a/algorithm/LeetCode/[Easy] 1184. Distance Between Bus Stops.md
+++ b/algorithm/LeetCode/[Easy] 1184. Distance Between Bus Stops.md
@@ -47,7 +47,7 @@ Explanation: Distance between 0 and 3 is 6 or 4, minimum is 4.
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Array)**
 ```
 Runtime: 52 ms
 Memory Usage: 14.8 MB
