--- a/algorithm/LeetCode/[Easy] 1252. Cells with Odd Values in a Matrix.md
+++ b/algorithm/LeetCode/[Easy] 1252. Cells with Odd Values in a Matrix.md
@@ -38,7 +38,7 @@ Explanation: Final matrix = [[2,2],[2,2]]. There is no odd number in the final m
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Array)**
 
 ```
 Runtime: 40 ms
