--- a/algorithm/LeetCode/[Easy] 1275. Find Winner on a Tic Tac Toe Game.md
+++ b/algorithm/LeetCode/[Easy] 1275. Find Winner on a Tic Tac Toe Game.md
@@ -69,7 +69,7 @@ Explanation: The game has not finished yet.
 
 # Submission
 ---
-**Solution 1:**
+**Solution 1: (Array)**
 ```
 Runtime: 24 ms
 Memory Usage: 12.7 MB
