--- a/algorithm/LeetCode/[Easy] 1185. Day of the Week.md
+++ b/algorithm/LeetCode/[Easy] 1185. Day of the Week.md
@@ -32,16 +32,15 @@ Output: "Sunday"
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Datetime)**
 ```
-Runtime: 40 ms
-Memory Usage: 13.8 MB
+Runtime: 24 ms
+Memory Usage: 12.9 MB
 ```
 ```python
 import datetime
 class Solution:
     def dayOfTheWeek(self, day: int, month: int, year: int) -> str:
-        days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']
-        d = datetime.datetime(year, month, day)
-        return days[d.weekday()]
+        givenDate=date(year,month, day)
+        return givenDate.strftime("%A")
 ```
