--- a/algorithm/LeetCode/[Easy] 1260. Shift 2D Grid.md
+++ b/algorithm/LeetCode/[Easy] 1260. Shift 2D Grid.md
@@ -44,7 +44,7 @@ Output: [[1,2,3],[4,5,6],[7,8,9]]
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Array)**
 ```
 Runtime: 204 ms
 Memory Usage: 12.9 MB
