--- a/algorithm/LeetCode/[Easy] 1295. Find Numbers with Even Number of Digits.md
+++ b/algorithm/LeetCode/[Easy] 1295. Find Numbers with Even Number of Digits.md
@@ -31,7 +31,7 @@ Only 1771 contains an even number of digits.
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Array)**
 ```
 Runtime: 52 ms
 Memory Usage: 12.9 MB
