--- a/algorithm/LeetCode/[Easy] 1337. The K Weakest Rows in a Matrix.md
+++ b/algorithm/LeetCode/[Easy] 1337. The K Weakest Rows in a Matrix.md
@@ -1,8 +1,8 @@
-1341. The K Weakest Rows in a Matrix
+1337. The K Weakest Rows in a Matrix
 
 Given a `m * n` matrix mat of ones (representing soldiers) and zeros (representing civilians), return the indexes of the `k` weakest rows in the matrix ordered from the weakest to the strongest.
 
-A row i is weaker than row j, if the number of soldiers in row i is less than the number of soldiers in row j, or they have the same number of soldiers but i is less than j. Soldiers are always stand in the frontier of a row, that is, **always** ones may appear first and then zeros.
+A row **i** is weaker than row **j**, if the number of soldiers in row **i** is less than the number of soldiers in row **j**, or they have the same number of soldiers but **i** is less than **j**. Soldiers are always stand in the frontier of a row, that is, **always** ones may appear first and then zeros.
 
  
 
@@ -54,7 +54,7 @@ Rows ordered from the weakest to the strongest are [0,2,3,1]
 
 # Submissions
 ---
-**SOluttion 1:**
+**SOluttion 1: (Array)**
 ```
 Runtime: 116 ms
 Memory Usage: 13 MB
