--- a/algorithm/LeetCode/[Easy] 1046. Last Stone Weight.md
+++ b/algorithm/LeetCode/[Easy] 1046. Last Stone Weight.md
@@ -30,7 +30,7 @@ we combine 1 and 1 to get 0 so the array converts to [1] then that's the value o
 
 # Submissions
 ---
-**Solution 1: (Greedy)**
+**Solution 1: (Heap)**
 ```
 Runtime: 32 ms
 Memory Usage: 12.7 MB
