--- a/algorithm/LeetCode/[Hard] 1000. Minimum Cost to Merge Stones.md
+++ b/algorithm/LeetCode/[Hard] 1000. Minimum Cost to Merge Stones.md
@@ -46,3 +46,29 @@ The total cost was 25, and this is the minimum possible.
 
 # Submissions
 ---
+**Solution 1: (DP Bottom-Up)**
+```
+Runtime: 44 ms
+Memory Usage: 13.7 MB
+```
+```python
+class Solution:
+    def mergeStones(self, stones: List[int], K: int) -> int:
+        N = len(stones)
+        if (N-1)%(K-1) != 0:
+            return -1
+        dp = [[0]*N for _ in range(N)]
+        sums = [0]*(N+1)
+        for i in range(1, N+1):
+            sums[i] = sums[i-1] + stones[i-1]
+        for length in range(K, N+1):
+            for i in range(N - length + 1):
+                j = i + length - 1
+                dp[i][j] = float('inf')
+                for t in range(i, j, K-1):
+                    dp[i][j] = min(dp[i][j], dp[i][t] + dp[t+1][j])
+                if (j-i)%(K-1) == 0:
+                    dp[i][j] += sums[j+1] - sums[i]
+                    
+        return dp[0][N-1]
+```
