--- a/algorithm/LeetCode/[Hard] 1000. Minimum Cost to Merge Stones.md
+++ b/algorithm/LeetCode/[Hard] 1000. Minimum Cost to Merge Stones.md
@@ -46,7 +46,7 @@ The total cost was 25, and this is the minimum possible.
 
 # Submissions
 ---
-**Solution 1: (DP Bottom-Up)**
+**Solution 1: (DP Bottom-Up, Prefix Sum)**
 ```
 Runtime: 44 ms
 Memory Usage: 13.7 MB
@@ -71,4 +71,61 @@ class Solution:
                     dp[i][j] += sums[j+1] - sums[i]
                     
         return dp[0][N-1]
+```
+
+**Solution 2: (DP Top-Down Memorization, Prefix Sum)**
+```
+Runtime: 52 ms
+Memory Usage: 13.9 MB
+```
+```python
+class Solution:
+    def mergeStones(self, stones: List[int], K: int) -> int:
+        N = len(stones)
+        if ((N-1)%(K-1)): return -1
+        table = [[-1]*(N) for i in range(N)]
+        preSum = [0]*N
+        preSum[0] = stones[0]
+        for i in range(1, N):
+            preSum[i] = preSum[i-1]+stones[i]
+
+        def fun(i, j):
+            if j-i+1 < K:
+                return 0
+            if table[i][j] != -1:
+                return table[i][j]
+            res = min((fun(i, k) + fun(k+1,j) for k in range(i, j, K-1))) #left part forms one pile and right part forms k-1 piles
+            if (j-i)%(K-1) == 0:
+                res += preSum[j]-(preSum[i-1] if i-1 >= 0 else 0)
+            table[i][j] = res
+            return table[i][j]
+
+        return fun(0, N-1)
+```
+
+**Solution 3: (DP Top-Down, Prefix Sum)**
+```
+Runtime: 48 ms
+Memory Usage: 14.3 MB
+```
+```python
+class Solution:
+    def mergeStones(self, stones: List[int], K: int) -> int:
+        N = len(stones)
+        if ((N-1)%(K-1)): return -1
+        preSum = [0]*N
+        preSum[0] = stones[0]
+        for i in range(1, N):
+            preSum[i] = preSum[i-1]+stones[i]
+
+        @functools.lru_cache(None)
+        def fun(i, j):
+            if j-i+1 < K:
+                return 0
+            res = min((fun(i, k) + fun(k+1,j) for k in range(i, j, K-1))) #left part forms one pile and right part forms k-1 piles
+            if (j-i)%(K-1) == 0:
+                res += preSum[j]-(preSum[i-1] if i-1 >= 0 else 0)
+            return res
+
+        return fun(0, N-1)
 ```
