update LeetCode solution - Dynamic Programming

--- a/algorithm/LeetCode/[Hard] 1012. Numbers With Repeated Digits.md
+++ b/algorithm/LeetCode/[Hard] 1012. Numbers With Repeated Digits.md
@@ -30,3 +30,52 @@ Output: 262
 
 # Submissions
 ---
+**Solution 1: (DP Top-Down, Digit DP)**
+
+Theory: https://codeforces.com/blog/entry/53960
+
+More of the same approach:
+* 902. Numbers At Most N Given Digit Set
+* 788. Rotated Digits
+* 1397. Find All Good Strings
+* 233. Number of Digit One
+* 357. Count Numbers with Unique Digits
+* 600. Non-negative Integers without Consecutive Ones
+
+At each recursive call (adding digit to less significant position) compute:
+
+* isPrefix - if the new number is the prefix of N
+* isBigger - if the new number will be bigger than N when we reach final position
+* digits - current digits of the new number
+* repeated - if there is already a repeated digit
+* Optimization - if there is already a repeated number and the current number cannot be bigger than N when we reach the last position we can add 10 (for 10 digits) to the result and every subresult gets multiplied by 10.
+
+```
+Runtime: 684 ms
+Memory Usage: 35.3 MB
+```
+```python
+class Solution:
+    def numDupDigitsAtMostN(self, N: int) -> int:
+        N = list(map(int, str(N)))
+
+        @functools.lru_cache(None)
+        def dp(pos, isPrefix, isBigger, digits, repeated):
+            if pos == len(N):
+                return 0
+            if repeated and not isPrefix and not isBigger:
+                return 10 + 10 * dp(pos + 1, False, False, digits, True)
+            result = 0
+            for i in range(0 if pos > 0 else 1, 10):
+                _isPrefix = isPrefix and i == N[pos]
+                _isBigger = isBigger or (isPrefix and i > N[pos])
+                _repeated = repeated
+                if (digits >> i) & 1 == 1:
+                    _repeated = True
+                if _repeated and not (pos == len(N) - 1 and _isBigger):
+                    result += 1
+                _digits = digits | (1 << i)
+                result += dp(pos + 1, _isPrefix, _isBigger, _digits, _repeated)
+            return result
+        return dp(0, True, False, 0, False)
+```
