--- a/algorithm/LeetCode/[Easy] 1025. Divisor Game.md
+++ b/algorithm/LeetCode/[Easy] 1025. Divisor Game.md
@@ -35,7 +35,7 @@ Explanation: Alice chooses 1, Bob chooses 1, and Alice has no more moves.
 
 # Submissions
 ---
-**Solution: (DP)**
+**Solution: (DP Bottom-Up)**
 ```
 Runtime: 184 ms
 Memory Usage: 12.7 MB
@@ -55,7 +55,33 @@ class Solution:
         return res[-1]
 ```
 
-**Solution 2:**
+**Solution 2: (DP Top-Down)**
+```
+Runtime: 76 ms
+Memory Usage: 15.2 MB
+```
+```python
+class Solution:
+    def divisorGame(self, N: int) -> bool:
+        
+        @functools.lru_cache(None)
+        def dp(n):
+            if n == 2: 
+                return True
+            if n == 1 or n == 3: 
+                return False
+            res = False
+            for i in range(1, n//2 + 1):
+                if n%i != 0: continue
+                if not dp(n - i):
+                    res = True
+                    break
+            return res
+        
+        return dp(N)
+```
+
+**Solution 3: (Math)**
 ```
 Runtime: 24 ms
 Memory Usage: 12.7 MB
