update LeetCode solution - Dynamic Programming

--- a/algorithm/LeetCode/[Hard] 1074. Number of Submatrices That Sum to Target.md
+++ b/algorithm/LeetCode/[Hard] 1074. Number of Submatrices That Sum to Target.md
@@ -70,3 +70,38 @@ class Solution:
                 
         return res
 ```
+
+**Solution 2: (DP Bottom-Up, Prefix Sum)**
+
+Please see and vote for my solution for these similar problems.
+* 560. Subarray Sum Equals K
+* 974. Subarray Sums Divisible by K
+* 325. Maximum Size Subarray Sum Equals k
+* 1074. Number of Submatrices That Sum to Target
+* 363. Max Sum of Rectangle No Larger Than K
+
+For each row, calculate the prefix sum. For each pair of columns, calculate the sum of rows.
+Now this problem is changed to problem 560 Subarray Sum Equals K.
+
+```
+Runtime: 6096 ms
+Memory Usage: 20.9 MB
+```
+```python
+class Solution:
+    def numSubmatrixSumTarget(self, matrix: List[List[int]], target: int) -> int:
+        m, n = len(matrix), len(matrix[0])
+        for x in range(m):
+            for y in range(n - 1):
+                matrix[x][y+1] += matrix[x][y]
+        res = 0
+        for y1 in range(n):
+            for y2 in range(y1, n):
+                preSums = {0: 1}
+                s = 0
+                for x in range(m):
+                    s += matrix[x][y2] - (matrix[x][y1-1] if y1 > 0 else 0)
+                    res += preSums.get(s - target, 0)
+                    preSums[s] = preSums.get(s, 0) + 1
+        return res
+```
