--- a/algorithm/LeetCode/[Hard] 1199. Minimum Time to Build Blocks.md
+++ b/algorithm/LeetCode/[Hard] 1199. Minimum Time to Build Blocks.md
@@ -39,7 +39,7 @@ The cost is 1 + max(3, 1 + max(1, 2)) = 4.
 
 # Submissions
 ---
-**Solution**
+**Solution 1: (Heap)**
 
 ![1199_1](img/1199_1.png)
 
