update LeetCode solution - Dynamic Programming

--- a/algorithm/LeetCode/[Hard] 1092. Shortest Common Supersequence.md
+++ b/algorithm/LeetCode/[Hard] 1092. Shortest Common Supersequence.md
@@ -23,3 +23,52 @@ The answer provided is the shortest such string that satisfies these properties.
 
 # Submissions
 ---
+**Solution 1: (DP Bottom-Up)**
+
+* This is the same code for LCS that you're going to use it in this question as this demands the shortest common supersequence(We need this because the Dp table has the longest common subsequence stored in table). 
+* If you think about it, the length of shortest common supersequence would be len(str1) + len(str2) - LCS. So what we are going to do is we would start from the last index of matrix and if we see that the elements are equal we are going to add them just once as they are LCS and if the elements are not equal then we add elements from both of them to find the required string.
+
+```
+Runtime: 532 ms
+Memory Usage: 22.6 MB
+```
+```python
+class Solution:
+    def shortestCommonSupersequence(self, str1: str, str2: str) -> str:
+        # Just make the dp table for finding the LCS and initialize with -1
+        M, N = len(str1), len(str2)
+        dp = [[-1 for _ in range(N+1)] for _ in range(M+1)]
+        for i in range(M+1):
+            for j in range(N+1):
+                if i == 0 or j == 0:
+                    dp[i][j] = 0
+                elif str1[i-1] == str2[j-1]:
+                    dp[i][j] = 1 + dp[i-1][j-1]
+                else:
+                    dp[i][j] = max(dp[i-1][j], dp[i][j-1])
+        i = M
+        j = N
+        res = ''
+        # Start form the last index and check for string elements
+        while i > 0 and j > 0:
+            if str1[i-1] == str2[j-1]:
+                res += str1[i-1]
+                i -= 1
+                j -= 1
+            elif dp[i][j-1] > dp[i-1][j]:
+                res += str2[j-1]
+                j -= 1
+            else:
+                res += str1[i-1]
+                i-=1
+        # We would come out of the above while loop once any of the string becomes 0 but don't forget to add the other string as we are still missing their part.
+        while i > 0:
+            res += str1[i-1]
+            i -= 1
+        
+        while j > 0:
+            res += str2[j-1]
+            j -= 1
+       # Once done with the loop just reverse to keep the order same as we started from the last
+        return res[::-1]
+```
