--- a/algorithm/LeetCode/[Hard] 1216. Valid Palindrome III.md
+++ b/algorithm/LeetCode/[Hard] 1216. Valid Palindrome III.md
@@ -21,7 +21,7 @@ Explanation: Remove 'b' and 'e' characters.
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (DP Bottom-Up)**
 ```
 Runtime: 296 ms
 Memory Usage: 14 MB
@@ -43,7 +43,7 @@ class Solution:
         return (N-dp[0]) <= k
 ```
 
-**Solution 2:**
+**Solution 2: (DP Top-Down)**
 ```python
 class Solution:
     def isValidPalindrome(self, s: str, k: int) -> bool:
