update LeetCode solution - Dynamic Programming

--- a/algorithm/LeetCode/[Hard] 1125. Smallest Sufficient Team.md
+++ b/algorithm/LeetCode/[Hard] 1125. Smallest Sufficient Team.md
@@ -34,4 +34,98 @@ Output: [1,2]
 
 # Submissions
 ---
-**Solution 1: **
+**Solution 1: (DP Bottom-Up)**
+
+**Explanation**
+
+* `dp[skill_set]` is a sufficient team to cover the skill_set.
+* For each people, update `his_skill` with all current combinations of `skill_set` in dp.
+
+
+**Complexity**
+
+* Time O(people * 2^skill)
+* Space O(2^skill)
+
+```
+Runtime: 224 ms
+Memory Usage: 21.4 MB
+```
+```python
+class Solution:
+    def smallestSufficientTeam(self, req_skills: List[str], people: List[List[str]]) -> List[int]:
+        n, m = len(req_skills), len(people)
+        key = {v: i for i, v in enumerate(req_skills)}
+        dp = {0: []}
+        for i, p in enumerate(people):
+            his_skill = 0
+            for skill in p:
+                if skill in key:
+                    his_skill |= 1 << key[skill]
+            for skill_set, need in list(dp.items()):
+                with_him = skill_set | his_skill
+                if with_him == skill_set: continue
+                if with_him not in dp or len(dp[with_him]) > len(need) + 1:
+                    dp[with_him] = need + [i]
+        return dp[(1 << n) - 1]
+```
+
+**Solution 2: (DP Top-Down)**
+```
+Runtime: 1040 ms
+Memory Usage: 103.3 MB
+```
+```python
+class Solution:
+    def smallestSufficientTeam(self, req_skills: List[str], people: List[List[str]]) -> List[int]:
+        n, m = len(req_skills), len(people)
+        key = {v: i for i, v in enumerate(req_skills)}
+        his_skill = [functools.reduce(lambda s,x: s|1<<key[x], p, 0) for p in people]
+        
+        @functools.lru_cache(None)
+        def dfs(mask, idx):
+            if mask == 0:
+                return 0,[]
+            if idx >= m:
+                return math.inf, []
+            s1, arr1 = dfs(mask, idx+1)
+            s2, arr2 = dfs(mask&(~his_skill[idx]), idx+1)
+            if s2 < s1:
+                return s2+1, [idx]+arr2
+            return s1,arr1
+        return dfs(2**n - 1, 0)[1]
+```
+
+**Solution 3: (Backtrack)**
+```
+Runtime: 256 ms
+Memory Usage: 13.8 MB
+```
+```python
+class Solution:
+    def smallestSufficientTeam(self, req_skills: List[str], people: List[List[str]]) -> List[int]:
+        n, m = len(req_skills), len(people)
+        key = {v: i for i, v in enumerate(req_skills)}
+        self.ans, self.cl = 0, float('inf')
+        TARGET = 2**n - 1
+        np = [set(people[i]) for i in range(m)]
+        his_skill = [0 for _ in range(m)]
+        for i in range(m):
+            for j in range(m):
+                if i != j and np[i].issubset(np[j]):
+                    np[i] = set()
+                    break
+            for k in np[i]:
+                his_skill[i] |= 1 << key[k]
+        
+        def solve(idx, sts, sz, path):
+            if sts == TARGET:
+                self.ans, self.cl = path, sz
+            elif sz < self.cl and idx < m:
+                if sts | his_skill[idx] != sts:
+                    solve(idx+1, sts | his_skill[idx], sz+1,  path | 1<<idx)
+                solve(idx+1, sts, sz, path)
+                
+        solve(0, 0, 0, 0)
+        return [i for i in range(m) if self.ans & 1 << i]
+```
