--- a/algorithm/LeetCode/[Hard] 1289. Minimum Falling Path Sum II.md
+++ b/algorithm/LeetCode/[Hard] 1289. Minimum Falling Path Sum II.md
@@ -25,7 +25,7 @@ The falling path with the smallest sum is [1,5,7], so the answer is 13.
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (DP Bottom-Up)**
 
 Find the 2 minimum value in the previous row.
 
@@ -41,4 +41,71 @@ class Solution:
             for j in range(len(arr[0])):
                 arr[i][j] += r[1] if arr[i - 1][j] == r[0] else r[0]
         return min(arr[-1])
+```
+
+**Solution 2: (DP Bottom-Up)**
+```
+Runtime: 1040 ms
+Memory Usage: 17.1 MB
+```
+```python
+class Solution:
+    def minFallingPathSum(self, arr: List[List[int]]) -> int:
+        N = len(arr)
+        dp = arr[:]      
+        for i in range(1, N):
+            for j in range(N):
+                if j == 0:
+                    dp[i][j] = arr[i][j] + min(arr[i-1][j+1:])
+                elif j == N-1:
+                    dp[i][j] = arr[i][j] + min(arr[i-1][:j])
+                else:
+                    dp[i][j] = arr[i][j] + min(arr[i-1][:j] + arr[i-1][j+1:])
+
+        return min(dp[-1])
+```
+
+**Solution 3: (DP Bottom-Up)**
+```
+Runtime: 928 ms
+Memory Usage: 17.3 MB
+```
+```python
+class Solution:
+    def minFallingPathSum(self, arr: List[List[int]]) -> int:
+        R, C = len(arr), len(arr[0])
+        for r in range(1,R):
+            for c in range(C):
+                if c == 0:
+                    arr[r][c] += min(arr[r-1][c+1:])
+                elif 0 < c < C-1:
+                    arr[r][c] += min(min(arr[r-1][c+1:]), min(arr[r-1][:c]))
+                else:
+                    arr[r][c] += min(arr[r-1][:c])
+        return min(arr[-1])
+```
+
+**Solution 4: (DP Top-Down)**
+```
+Runtime: 5864 ms
+Memory Usage: 32.2 MB
+```
+```python
+class Solution:
+    def minFallingPathSum(self, arr: List[List[int]]) -> int:
+        R, C = len(arr), len(arr[0])
+        
+        @functools.lru_cache(None)
+        def dp(r, c):
+            if r == 0:
+                return arr[r][c]
+            else:
+                if c == 0:
+                    return arr[r][c] + min(dp(r-1, nc) for nc in range(1, C))
+                elif c == C-1:
+                    return arr[r][c] + min(dp(r-1, nc) for nc in range(0, C-1))
+                else:
+                    return arr[r][c] + min(dp(r-1, nc) for nc in list(range(0,c)) + list(range(c+1, C)))
+
+        return min(dp(R-1, c) for c in range(C))
 ```
