--- a/algorithm/LeetCode/[Hard] 1301. Number of Paths with Max Score.md
+++ b/algorithm/LeetCode/[Hard] 1301. Number of Paths with Max Score.md
@@ -34,7 +34,7 @@ Output: [0,0]
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (DP Bottom-Up)**
 
 **Explanation**
 
@@ -68,4 +68,33 @@ class Solution:
                         dp[x][y][1] += dp[x + i][y + j][1]
                 dp[x][y][0] += int(board[x][y]) if x or y else 0
         return [dp[0][0][0] if dp[0][0][1] else 0, dp[0][0][1] % mod]
+```
+
+**Solution 2: (DP Top-Down)**
+```
+Runtime: 200 ms
+Memory Usage: 23 MB
+```
+```python
+class Solution:
+    def pathsWithMaxScore(self, board: List[str]) -> List[int]:
+        R, C = len(board), len(board[0])
+        MOD = 10**9 + 7
+        
+        @functools.lru_cache(None)
+        def dp(i, j):
+            if i == 0 and j == 0:
+                return [0, 1]
+            if i < 0 or j < 0 or board[i][j] == 'X':
+                return [float('-inf'), 0]
+            v = int(board[i][j]) if board[i][j] != "S" else 0
+            s1, n1 = dp(i-1, j)
+            s2, n2 = dp(i, j-1)
+            s3, n3 = dp(i-1, j-1)
+            max_s = max(s1, s2, s3)
+            max_n = sum(nn for ns, nn in [(s1, n1), (s2, n2), (s3, n3)] if ns == max_s)
+            return (v + max_s, max_n)
+        
+        ans = dp(R-1, C-1)
+        return [ans[0]%MOD, ans[1]%MOD] if ans[0] != float('-inf') else [0, 0]
 ```
