update LeetCode Weekly Contest 186

--- a/algorithm/LeetCode/[Hard] 1147. Longest Chunked Palindrome Decomposition.md
+++ b/algorithm/LeetCode/[Hard] 1147. Longest Chunked Palindrome Decomposition.md
@@ -60,7 +60,7 @@ class Solution:
         return 1
 ```
 
-**Solution 1: (Rolling Hash, Greedy)**
+**Solution 1: (Rolling Hash, Greedy, Two Pointers, Iterative)**
 ```
 Runtime: 32 ms
 Memory Usage: 12.6 MB
