--- a/algorithm/LeetCode/[Hard] 1363. Largest Multiple of Three.md
+++ b/algorithm/LeetCode/[Hard] 1363. Largest Multiple of Three.md
@@ -67,6 +67,154 @@ class Solution:
             res = digits
         res.sort(reverse = True)
         if not res: return ''
-        return str(int(''.join([str(i) for i in res])))
+        return str(int(''.join([str(i) for i in res])))     
+```
+
+**Solution 2: (DP Bottom-Up)**
+```
+Runtime: 352 ms
+Memory Usage: 157 MB
+```
+```python
+class Solution:
+    def largestMultipleOfThree(self, digits: List[int]) -> str:
+        n = len(digits)
+        digits.sort() # sort the array in ascending order first
+        dp = [["" for _ in range(3)] for _ in range(n)] #dp[i][j]: the biggest val I can construct using the first i elements such that val % 3 == j
+        dp[0][digits[0] % 3] = str(digits[0])
+        for i in range(1, n):
+            dp[i] = dp[i - 1].copy()
+            for j in range(3):
+                if dp[i - 1][j] != "":
+                    val = str(digits[i]) + dp[i - 1][j]
+                else:
+                    val = str(digits[i])
+                idx = (j + digits[i]) % 3 if dp[i - 1][j] != "" else digits[i] % 3
+                dp[i][idx] = val if self.isBigger(val, dp[i][idx]) else dp[i][idx]
+        res = dp[-1][0]
+        if len(res) > 1 and res[-1] == "0" and res[0] == "0": # eg: "00000"
+            return "0"
+        else:
+            return res
+    def isBigger(self, num1, num2):
+        if len(num1) >= len(num2) and num1 > num2:
+            return True
+        else:
+            return False
+```
+
+**Solution 3: (DP Top-Down)**
+```
+Runtime: 232 ms
+Memory Usage: 40.1 MB
+```
+```python
+class Solution:
+    def largestMultipleOfThree(self, digits: List[int]) -> str:
+        N = len(digits)
+        nonzero = []
+        cnt0 = 0
+        for d in digits:
+            if d == 0:
+                cnt0 += 1
+            else:
+                nonzero += [d]
+        if cnt0 == N:
+            return "0"
+        nonzero.sort(reverse=True)
+        size = len(nonzero)
+        take = [[0]*3 for _ in range(size)]
         
+        @functools.lru_cache(None)
+        def dfs(idx, cursum): 
+            if idx == size:
+                if cursum == 0:
+                    return 0
+                return float('-inf')
+            untaken = dfs(idx+1, cursum);
+            taken = dfs(idx+1, (cursum + nonzero[idx]) % 3);
+            if 1+taken >= untaken:
+                untaken = 1+taken
+                take[idx][cursum] = 1
+            return untaken
+        
+        dfs(0, 0)
+        res = ""
+        cursum = 0
+        for i in range(size):
+            if take[i][cursum] == 1:
+                res += str(nonzero[i])
+                cursum = (cursum + nonzero[i]) % 3
+        if res=="":
+            if cnt0 > 0:
+                return "0"
+            return ""
+        for i in range(cnt0):
+            res += "0"
+        return res
+```
+
+**Solution 4: (DP Top-Down)**
+```
+Runtime: 344 ms
+Memory Usage: 290.2 MB
+```
+```python
+class Solution:
+    def largestMultipleOfThree(self, digits: List[int]) -> str:
+        N = len(digits)
+        nonzero = []
+        cnt0 = 0
+        for d in digits:
+            if d == 0:
+                cnt0 += 1
+            else:
+                nonzero += [d]
+        if cnt0 == N:
+            return "0"
+        nonzero.sort(reverse=True)
+        size = len(nonzero)
+        
+        @functools.lru_cache(None)
+        def dfs(idx, cursum): 
+            if idx == size:
+                if cursum == 0:
+                    return [0, '']
+                return [float('-inf'), '']
+            untaken, untaken_path = dfs(idx+1, cursum);
+            taken, taken_path = dfs(idx+1, (cursum + nonzero[idx]) % 3);
+            if 1+taken >= untaken:
+                untaken = 1+taken
+                return [untaken, str(nonzero[idx])+taken_path]
+            return [untaken, untaken_path]
+        
+        _, res = dfs(0, 0)
+        if res == "":
+            return '0' if cnt0 > 0 else ''
+        return res + '0'*cnt0
+```
+
+**Solution 5: (Hash Table, Sort)**
+```
+Runtime: 108 ms
+Memory Usage: 14.7 MB
+```
+```python
+class Solution:
+    def largestMultipleOfThree(self, digits: List[int]) -> str:
+        digits.sort(reverse=True)
+        category = dict()
+        for d in digits: category.setdefault(d%3, []).append(d)
+        
+        parity = sum(digits) % 3
+        if parity != 0: 
+            if len(category.get(parity, [])) > 0: 
+                digits.remove(category[parity][-1])
+            elif len(category.get(3-parity, [])) > 1: 
+                digits.remove(category[3-parity][-1])
+                digits.remove(category[3-parity][-2])
+            else: 
+                return ""
+        
+        return "0" if digits and not digits[0] else "".join(str(d) for d in digits)
 ```
