update LeetCode solution - Dynamic Programming

--- a/algorithm/LeetCode/[Hard] 1220. Count Vowels Permutation.md
+++ b/algorithm/LeetCode/[Hard] 1220. Count Vowels Permutation.md
@@ -36,7 +36,7 @@ Output: 68
 
 # Solution
 ---
-**Solution 1:**
+**Solution 1: (DP Bottom-Up)**
 
 Each vowel allows some number of subsequent characters. These transitions are like a tree. This problem is asking, "what's the width of the tree with height n?"
 
@@ -54,4 +54,58 @@ class Solution:
         for _ in range(n - 1):
             a, e, i, o, u = e + i + u, a + i, e + o, i, i + o
         return (a + e + i + o + u) % (10**9 + 7)
+```
+
+**Solution 2: (DP Top-Down)**
+```
+Runtime: 840 ms
+Memory Usage: 611.6 MB
+```
+```python
+class Solution:
+    def countVowelPermutation(self, n: int) -> int:
+        MOD = 10**9 + 7
+        
+        @functools.lru_cache(None)
+        def dp(i, c):
+            if i == n-1:
+                return 1
+            if c == 'a':
+                return dp(i+1, 'e')
+            elif c == 'e':
+                return dp(i+1, 'a') + dp(i+1, 'i')
+            elif c == 'i':
+                return dp(i+1, 'a') + dp(i+1, 'e') + dp(i+1, 'o') + dp(i+1, 'u')
+            elif c == 'o':
+                return dp(i+1, 'i') + dp(i+1, 'u')
+            else:
+                return dp(i+1, 'a')
+            
+        return sum([dp(0, _) for _ in ['a', 'e', 'i', 'o', 'u']]) % MOD
+```
+
+**Solution 3: (DP Top-Down)**
+```
+Runtime: 1568 ms
+Memory Usage: 199.8 MB
+```
+```python
+class Solution:
+    def countVowelPermutation(self, n: int) -> int:
+        MOD = 10**9 + 7
+        d = {
+            'a': ['e'],
+            'e': ['a', 'i'],
+            'i': ['a', 'e', 'o', 'u'],
+            'o': ['i', 'u'],
+            'u': ['a']
+        }
+        
+        @functools.lru_cache(None)
+        def dp(i, c):
+            if i == n-1:
+                return 1
+            return sum([dp(i+1, _) for _ in d[c]])
+            
+        return sum([dp(0, _) for _ in list(d.keys())]) % MOD
 ```
