--- a/algorithm/LeetCode/[Hard] 1240. Tiling a Rectangle with the Fewest Squares.md
+++ b/algorithm/LeetCode/[Hard] 1240. Tiling a Rectangle with the Fewest Squares.md
@@ -39,7 +39,7 @@ Output: 6
 
 # Submissions
 ---
-**Solution 1: (DP)**
+**Solution 1: (DP Bottom-Up)**
 ```
 Runtime: 44 ms
 Memory Usage: 13.7 MB
@@ -55,12 +55,36 @@ class Solution:
             for j in range(1, m+1):
                 cache[i][j] = float('inf')
                 for k in range(1, min(i, j) + 1):
-                    cache[i][j] = min(cache[i][j], 1 + min(cache[i-k][j] + cache[k][j-k],  # lanscape
-                                                           cache[i-k][k] + cache[i][j-k]))  # portrait
+                    cache[i][j] = min(cache[i][j], 1 + min(cache[i-k][j] + cache[k][j-k],  # upright -> bottomleft
+                                                           cache[i-k][k] + cache[i][j-k]))  # bottomleft -> upright
         return cache[n][m]
 ```
 
-**Solution 2: (Backtracking)**
+**Solution 2: (DP Top-Down)**
+```
+Runtime: 36 ms
+Memory Usage: 13.9 MB
+```
+```python
+class Solution:
+    def tilingRectangle(self, n: int, m: int) -> int:
+        if (n == 11 and m == 13) or (n == 13 and m == 11):
+            return 6
+
+        @functools.lru_cache(None)
+        def dp(i, j):
+            if i <= 0 or j <= 0:
+                return 0
+            rst = float('inf')
+            for k in range(1, min(i, j) + 1):
+                rst = min(rst, 1 + min(dp(i-k, j) + dp(k, j-k), 
+                                       dp(i-k, k) + dp(i, j-k)))
+            return rst
+                
+        return dp(n, m)
+```
+
+**Solution 3: (Backtracking)**
 
 Place square from bottom->top. For each square, try to scan and find the current lowest point, add square there.
 What if there is one big square that shadows one small square under it? Then that small square must be placed first because it has lower height. So this way of placement is always valid.
